@@ -176,6 +176,8 @@ Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</stri
     <string name="messageNotController">Not a controller</string>
     <string name="messageResetLabelsPrompt">Reset all labels?</string>
     <string name="messageResetLabelsComplete">Labels reset to default</string>
+    <string name="messageResetEnabledPortsPrompt">Reset all enabled ports?</string>
+    <string name="messageResetEanbledPortsComplete">All ports enabled</string>
     <string name="messageNetworkOffline">Unable to send, no network connection</string>
     <string name="messageDeleteLogPrompt">Delete log file?</string>
     <string name="messageSendLogPrompt">Email log to developer?</string>
@@ -261,7 +263,8 @@ Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</stri
     <string name="prefWaterLevelVisibilityTitle">Water Level</string>
     <string name="prefResetCategory">Reset Settings</string>
     <string name="prefResetLabelsTitle">Reset Labels</string>
-    <string name="prefResetLabelsSummary">Defaults</string>
+    <string name="prefResetSummary">Defaults</string>
+    <string name="prefResetEnabledPortsTitle">Reset Enabled Ports</string>
     <string name="prefLabelsCategory">Label Settings</string>
     <string name="prefControllerLabelsDownloadTitle">Download</string>
     <string name="prefControllerLabelsDownloadSummary">Retrieves your labels from reefangel.com using id: </string>
@@ -375,6 +378,7 @@ Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</stri
     <string name="prefPHExpVisibilityKey">phe_visibility</string>
     <string name="prefWaterLevelVisibilityKey">wl_visibility</string>
     <string name="prefResetLabelsKey">reset_labels</string>
+    <string name="prefResetEnabledPortsKey">reset_enabled_ports</string>
     <string name="prefControllerLabelsDownloadKey">download_labels</string>
     <string name="prefT1LabelKey">t1_label</string>
     <string name="prefT2LabelKey">t2_label</string>
