@@ -153,5 +153,6 @@ Changelog of all the versions of AndroidStatus
 0.8.2
  * added ability to disable specific relays to prevent accidental toggling from the app (from triggerNZ)
  ** default all relays are enabled
+ * ability to reset disabled ports to defaults
  * code updates
  
